# demo-python-graphql

./: README.md  main.py  pyproject.toml  requirements.txt
example/: advance.py  app.py  basic.py
resolvers/: mutation_resolvers.py  query_resolvers.py  utils.py
schema/: mutations.py  queries.py  schema.py  types.py
